- added build flag CONOPT (default: false) to link to the CONOPT NLP solver
- LPS=spx is no longer mapped to LPS=spx2, which changes the name of the generated LPI libraries and binaries when using SoPlex
- default settings for makefile variables in make.project are now only used if variable hasn't been set already

### Cmake

- increased minimal required cmake version to 3.11
- removed automatic download and build of Bliss during cmake configuration when -DSYM=(s)bliss;
  please build and install from https://github.com/scipopt/bliss before and specify -DBLISS_DIR
- replaced `SANITIZE_XYZ=(on|off)` options by `SANITIZE=(on|off|thread|address|memory)`;
  undefined behavior sanitizer is always enabled if not `SANITIZE=off` (the default)
- scip-config.cmake now defines a variable SCIP_COMPILE_FLAGS, which could be used to compile code that builds against SCIP via cmake;
  currently, this only passes on the sanitizer flags that were used to build libscip
- enabled link-time-optimization for Release and RelWithDebInfo builds if supported by compiler, use -DLTO=off to disable
- link-time-optimization can be enabled if supported by compiler by using -DLTO=on, default is off
- added build flag CONOPT (default: off) to link to the CONOPT NLP solver and variable CONOPT_DIR to specify the path to CONOPT
- removed option LEGACY

Fixed bugs
----------

- fixed bug related to unreleased data for the Benders' decomposition framework. When reading an SMPS file and applying
  Benders' decomposition, data is created that was not correctly released. Also, data within the Benders' decomposition
  framework was not appropriately reset. The data is now released/reset as expected.
- To fix a bug where duplicate cuts from different constraint handlers were not recognized, SCIPrealHash() was changed
  to be stable around shortly representable numbers, and a numerical tolerance for comparing cutting plane efficacy for the aggregation
  separator is introduced.